--- a/lesson-33/hw-33.md
+++ b/lesson-33/hw-33.md
@@ -9,7 +9,7 @@
     1. Создать строку из названий предметов написаных через запятую
     2. Посчитать общее количество студентов и учителей на всех предметах
     3. Получить среднее количество студентов на всех пердметах
-    4. Создать массив из объектов предметов. Где будет поле *subject* и названием предмета и *id*
+    4. Создать массив из объектов предметов. Где будет поле subject c названием предмета и id
     5. Получить массив из предметов и отсортировать по количеству преподавателей на факультете от большего к меньшему
 
 
