--- a/lesson-36/hw-36.md
+++ b/lesson-36/hw-36.md
@@ -32,8 +32,8 @@ C массивом фильмов (Homework_36.md) сделать следующ
 фильм с id=1 если передаем (films, 'year', 2011) , то получаем
 фильм с id=2
 
-```json
- [
+```javascript
+ const movies = [
   {
     id: 1
     title: "Black Widow",
