--- a/lesson-36/hw-36.md
+++ b/lesson-36/hw-36.md
@@ -1,6 +1,6 @@
 Homework 36
 
-C массивом фильмов (Homework_36.md) сделать следующий
+C массивом фильмов сделать следующий
 задачи, используя map/reduce вместо for, forEach:
 
 1. Собрать в массив все жанры фильмов (без повторения)
